--- a/client/package.json
+++ b/client/package.json
@@ -6,11 +6,14 @@
   "dependencies": {
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.13.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-google-maps": "^9.4.5",
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
+    "react-test-renderer": "^16.8.6",
     "redux": "^4.0.1"
   },
   "scripts": {
