--- a/client/package.json
+++ b/client/package.json
@@ -16,8 +16,7 @@
     "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
     "react-test-renderer": "^16.8.6",
-    "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux": "^4.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
